<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CameraActivity" >

    <Button
        android:id="@+id/twitterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/spaceAppButton"
        android:layout_alignBottom="@+id/spaceAppButton"
        android:layout_alignParentRight="true"
        android:layout_marginRight="41dp"
        android:background="@drawable/twitterbutton"
        android:onClick="shareToTwitter"
        android:text=" " />

    <Button
        android:id="@+id/spaceAppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="165dp"
        android:background="@drawable/spotthestationbutton"
        android:onClick="shareToNASA"
        android:text=" " />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/twitterButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:text="@string/Share"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spaceAppButton"
        android:layout_below="@+id/spaceAppButton"
        android:text="@string/Map"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignRight="@+id/twitterButton"
        android:text="@string/twitter_name"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>